--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <title>BBB英会話スクール</title>
     <meta name="description" content="テキストテキストテキストテキストテキストテキストテキストテキスト">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="https://github.com/am250314/school.github.io/blob/main/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="css/destyle.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://am250314.github.io/school.github.io/css/destyle.css">
+    <link rel="stylesheet" href="https://am250314.github.io/school.github.io/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/jquery.inview.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://am250314.github.io/school.github.io/jquery.inview.min.js"></script>
+    <script src="https://am250314.github.io/school.github.io/main.js"></script>
   </head>
 
   <body>
     <header id="header">
       <h1 class="site-title">
-        <a href="#"><img src="img/logo-r.svg" alt="BBB英会話スクール"></a>
+        <a href="#"><img src="https://github.com/am250314/school.github.io/blob/main/logo-r.svg" alt="BBB英会話スクール"></a>
       </h1>
 
       <nav id="navi">
-        <img class="logo" src="img/logo-w.svg" alt="BBB英会話スクール">
+        <img class="logo" src="https://github.com/am250314/school.github.io/blob/main/logo-w.svg" alt="BBB英会話スクール">
         <ul class="menu">
           <li><a href="#reason">BBBが選ばれる理由</a></li>
           <li><a href="#voice">受講生の声</a></li>
@@ -45,9 +45,9 @@
           <a class="btn" href="#">無料体験はこちら</a>
         </div>
         <ul class="fade">
-          <li><img src="img/mainvisual1.jpg" alt=""></li>
-          <li><img src="img/mainvisual2.jpg" alt=""></li>
-          <li><img src="img/mainvisual3.jpg" alt=""></li>
+          <li><img src="https://github.com/am250314/school.github.io/blob/main/mainvisual1.jpgs" alt=""></li>
+          <li><img src="https://github.com/am250314/school.github.io/blob/main/mainvisual2.jpgs" alt=""></li>
+          <li><img src="https://github.com/am250314/school.github.io/blob/main/mainvisual3.jpgs" alt=""></li>
         </ul>
       </div>
 
@@ -57,14 +57,14 @@
 
         <div class="bg">
           <div class="slide inview-slide-left">
-            <img src="img/icon-pc.png" alt="">
+            <img src="https://github.com/am250314/school.github.io/blob/main/icon-pc.png" alt="">
             <p>
               <span class="title">オンライン対応</span>
               <span class="text">24時間いつでも受講できる！</span>
             </p>
           </div>
           <div class="slide inview-slide-right">
-            <img src="img/icon-teacher.png" alt="">
+            <img src="https://github.com/am250314/school.github.io/blob/main/icon-teacher.png" alt="">
             <p>
               <span class="title">講師はネイティブ</span>
               <span class="text">お気に入りの講師が自由に選べる！</span>
@@ -79,7 +79,7 @@
 
         <div class="item-left inview-balloon">
           <div class="student">
-            <img src="img/icon-student1.png" alt="">
+            <img src="https://github.com/am250314/school.github.io/blob/main/icon-student1.png" alt="">
             <p class="name">○○○さん<br>大学生</p>
           </div>
           <div class="balloon-text">
@@ -98,14 +98,14 @@
             </p>
           </div>
           <div class="student">
-            <img src="img/icon-student2.png" alt="">
+            <img src="https://github.com/am250314/school.github.io/blob/main/icon-student2.png" alt="">
             <p class="name">○○○さん<br>会社員</p>
           </div>
         </div>
 
         <div class="item-left inview-balloon">
           <div class="student">
-            <img src="img/icon-student3.png" alt="">
+            <img src="https://github.com/am250314/school.github.io/blob/main/icon-student3.png" alt="">
             <p class="name">○○○さん<br>自営業</p>
           </div>
           <div class="balloon-text">
