--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="https://github.com/am250314/school.github.io/blob/main/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="https://am250314.github.io/school.github.io/css/destyle.css">
-    <link rel="stylesheet" href="https://am250314.github.io/school.github.io/css/style.css">
+    <link rel="stylesheet" href="https://am250314.github.io/school.github.io/destyle.css">
+    <link rel="stylesheet" href="https://am250314.github.io/school.github.io/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://am250314.github.io/school.github.io/jquery.inview.min.js"></script>
     <script src="https://am250314.github.io/school.github.io/main.js"></script>
