--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <body>
     <header id="header">
       <h1 class="site-title">
-        <a href="#"><img src="https://github.com/am250314/school.github.io/blob/main/logo-r.svg" alt="BBB英会話スクール"></a>
+        <a href="#"><img src="https://raw.githubusercontent.com/am250314/school.github.io/7e3c4854dcf935c4808590d8ea2883b6900cdd55/logo-r.svg" alt="BBB英会話スクール"></a>
       </h1>
 
       <nav id="navi">
-        <img class="logo" src="https://github.com/am250314/school.github.io/blob/main/logo-w.svg" alt="BBB英会話スクール">
+        <img class="logo" src="https://raw.githubusercontent.com/am250314/school.github.io/7e3c4854dcf935c4808590d8ea2883b6900cdd55/logo-w.svg" alt="BBB英会話スクール">
         <ul class="menu">
           <li><a href="#reason">BBBが選ばれる理由</a></li>
           <li><a href="#voice">受講生の声</a></li>
@@ -45,9 +45,9 @@
           <a class="btn" href="#">無料体験はこちら</a>
         </div>
         <ul class="fade">
-          <li><img src="https://github.com/am250314/school.github.io/blob/main/mainvisual1.jpgs" alt=""></li>
-          <li><img src="https://github.com/am250314/school.github.io/blob/main/mainvisual2.jpgs" alt=""></li>
-          <li><img src="https://github.com/am250314/school.github.io/blob/main/mainvisual3.jpgs" alt=""></li>
+          <li><img src="https://raw.githubusercontent.com/am250314/school.github.io/refs/heads/main/mainvisual1.jpg" alt=""></li>
+          <li><img src="https://raw.githubusercontent.com/am250314/school.github.io/refs/heads/main/mainvisual2.jpg" alt=""></li>
+          <li><img src="https://raw.githubusercontent.com/am250314/school.github.io/refs/heads/main/mainvisual3.jpg" alt=""></li>
         </ul>
       </div>
 
@@ -57,14 +57,14 @@
 
         <div class="bg">
           <div class="slide inview-slide-left">
-            <img src="https://github.com/am250314/school.github.io/blob/main/icon-pc.png" alt="">
+            <img src="https://raw.githubusercontent.com/am250314/school.github.io/refs/heads/main/icon-pc.png" alt="">
             <p>
               <span class="title">オンライン対応</span>
               <span class="text">24時間いつでも受講できる！</span>
             </p>
           </div>
           <div class="slide inview-slide-right">
-            <img src="https://github.com/am250314/school.github.io/blob/main/icon-teacher.png" alt="">
+            <img src="https://raw.githubusercontent.com/am250314/school.github.io/refs/heads/main/icon-teacher.png" alt="">
             <p>
               <span class="title">講師はネイティブ</span>
               <span class="text">お気に入りの講師が自由に選べる！</span>
@@ -79,7 +79,7 @@
 
         <div class="item-left inview-balloon">
           <div class="student">
-            <img src="https://github.com/am250314/school.github.io/blob/main/icon-student1.png" alt="">
+            <img src="https://raw.githubusercontent.com/am250314/school.github.io/refs/heads/main/icon-student1.png" alt="">
             <p class="name">○○○さん<br>大学生</p>
           </div>
           <div class="balloon-text">
@@ -98,14 +98,14 @@
             </p>
           </div>
           <div class="student">
-            <img src="https://github.com/am250314/school.github.io/blob/main/icon-student2.png" alt="">
+            <img src="https://raw.githubusercontent.com/am250314/school.github.io/refs/heads/main/icon-student2.png" alt="">
             <p class="name">○○○さん<br>会社員</p>
           </div>
         </div>
 
         <div class="item-left inview-balloon">
           <div class="student">
-            <img src="https://github.com/am250314/school.github.io/blob/main/icon-student3.png" alt="">
+            <img src="https://raw.githubusercontent.com/am250314/school.github.io/refs/heads/main/icon-student3.png" alt="">
             <p class="name">○○○さん<br>自営業</p>
           </div>
           <div class="balloon-text">
